force-app/main/default/objects/Federal_Withholding__mdt/Federal_Withholding__mdt.object-meta.xml
<CustomObject>
    <description>Federal Tax Brackets to use in take home calculations</description>
    <label>Federal Withholding</label>
    <pluralLabel>Federal Withholdings</pluralLabel>
</CustomObject>