force-app/main/default/objects/Federal_Withholding__mdt/fields/Bracket_End__c.field-meta.xml
<CustomField>
    <fullName>Bracket_End__c</fullName>
    <description>The dollar amount that the bracket ends at</description>
    <label>Bracket End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>