force-app/main/default/objects/Federal_Withholding__mdt/fields/Bracket_Start__c.field-meta.xml
<CustomField>
    <fullName>Bracket_Start__c</fullName>
    <description>The dollar amount that a given tax bracket starts at</description>
    <label>Bracket Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>