force-app/main/default/objects/Federal_Withholding__mdt/fields/Federal_Tax_Filing_Status__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Filing_Status__c</fullName>
    <description>Federal Tax Filing Status, since this impacts the Federal Withholding</description>
    <label>Federal Tax Filing Status</label>
    <referenceTo>Federal_Tax_Filing_Status__mdt</referenceTo>
    <relationshipLabel>Federal Withholdings</relationshipLabel>
    <relationshipName>Federal_Withholdings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>