force-app/main/default/objects/Federal_Withholding__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order of the tax bracket within its Filing Status from lowest income to highest income</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>