force-app/main/default/objects/Federal_Withholding__mdt/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>The % tax rate on earnings over the start of the bracket</description>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>