force-app/main/default/objects/Federal_Withholding__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of federal withholding</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Income Tax</fullName>
                <default>true</default>
                <label>Federal Income Tax</label>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>